Don't go out of bounds of m_columnList

BUG: 372254
FIXED-IN: 5.0
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>