kmymoney/plugins/csvimport/bankingwizardpage.cpp
@@ -575,7 +575,8 @@ bool BankingPage::processBankLine(const QString &line, MyMoneyStatement &st)
     if (m_wiz->m_memoColList[i] != m_colTypeNum[ColumnMemo]) {
       if (!memo.isEmpty())
         memo.append(QChar(QLatin1Char('\n')));
-      memo.append(m_columnList[m_wiz->m_memoColList[i]]);
+      if (m_wiz->m_memoColList[i] < m_columnList.count())
+        memo.append(m_columnList[m_wiz->m_memoColList[i]]);
     }
   }
   tr.m_strMemo = memo;
